trying to fix scrolling bug on mobile v7

--- a/css/styles.css
+++ b/css/styles.css
@@ -532,8 +532,8 @@ body {
 body {
     background-color            : var(--color-body);
     
-    /* -webkit-overflow-scrolling  : touch;
-    overflow: scroll; */
+    -webkit-overflow-scrolling  : touch !important;
+    overflow: scroll !important;
 
     -webkit-text-size-adjust    : 100%;
     -webkit-tap-highlight-color : rgba(0, 0, 0, 0);
